[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/AppButton.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/ariblk.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="AppButton" type="Control"]
margin_right = 64.0
margin_bottom = 96.0
rect_min_size = Vector2( 64, 64 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 64, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "null"
expand_icon = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "App Name (Kinda long)"
align = 1
autowrap = true
clip_text = true

[connection signal="mouse_entered" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_Button_pressed"]
